Fix overflow hidden menu on files

--- a/public/css/gramola.css
+++ b/public/css/gramola.css
@@ -86,3 +86,7 @@
 #jp_container_1 {
   border: 0px;
 }
+
+.collection {
+  overflow:visible;
+}
